Pruebas de empaquetado y servidor de distribución

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <!-- inject:css -->
+  <!-- endinject -->
 </head>
 <body>
-<h1>Hello World!</h1>
+<div class="container">
+  <h1>Hello World!  </h1>
+  <span class="algo">Rosita</span>
+  <button class="btn btn-default"> Hola mundo sin que hacer</button>
+</div>
+
+<!-- libs:js -->
+<!-- endinject -->
+
+<!-- inject:js -->
+<!-- endinject -->
 </body>
 </html>
