tareas para productivo

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="elporfirioApp">
+<html lang="en" ng-app="elporfirio.com">
 <head>
   <meta charset="UTF-8">
+  <base href="/">
   <title>Title</title>
   <!-- inject:css -->
   <!-- endinject -->
