--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
   <div class="contenido" ui-view></div>
 </div>
 
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRhthl1NW5FffP0MIrvFtL_j3BN_EUVxo"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRhthl1NW5FffP0MIrvFtL_j3BN_EUVxo" async defer></script>-->
 <!-- libs:js -->
 <!-- endinject -->
 
